# pmu

./: README.org  configure.ac  org.sadiqpk.pmu.flatpak.json
data/: Makefile.am  org.sadiqpk.pmu.desktop.in
po/: POTFILES.in
src/: Makefile.am  c37-config.c  c37-config.h  main.c  pmu-app.c  pmu-app.h  pmu-config.h  pmu-details.c  pmu-details.h  pmu-list.c  pmu-list.h  pmu-server.c  pmu-server.h  pmu-setup-window.c  pmu-setup-window.h  pmu-spi.c  pmu-spi.h  pmu-types.h  pmu-utils.c  pmu-utils.h  pmu-window.c  pmu-window.h
src/c37/: c37-bin.c  c37-bin.h  c37-command.c  c37-command.h  c37-common.c  c37-common.h  c37-conf.c  c37-conf.h  c37-config.c  c37-config.h  c37-data.c  c37-data.h  c37-header.c  c37-header.h  c37.h
src/resources/: org.sadiqpk.pmu.gschema.xml  pmu.gresource.xml
src/resources/css/: pmu-list.css  pmu.css
src/resources/gtk/: menus.ui
src/resources/ui/: pmu-list.ui  pmu-setup-window.ui  pmu-window.ui
